@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-27T16:08:28Z",
-  "count_outdated" : 1278,
-  "uniques_outdated" : 685,
+  "timestamp" : "2023-07-28T00:37:59Z",
+  "count_outdated" : 1280,
+  "uniques_outdated" : 686,
   "count" : 1305,
   "uniques" : 702,
   "clones" : [
-    {
-      "timestamp": "2023-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 2,
