@@ -1,3 +1,12 @@
+2023-07-28T00:37:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5686849282 # 1769
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 685 1278 / 702 1305
+* notice: next accum: outdated-unq outdated-all / unq all: 686 1280 / 702 1305
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-13] / []
+
 2023-07-27T16:08:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5682887358 # 1768
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
